--- a/src/index.html
+++ b/src/index.html
@@ -1,65 +1,82 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <title>Mini useful web components</title>
+  <title>Functional web components</title>
 
   <script type="module" src="/build/web-comps.esm.js"></script>
   <script nomodule src="/build/web-comps.js"></script>
 
 </head>
+
 <body>
   <div class="container">
-    <div class="navbar">
-      <svg class="fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="24" height="24"><title>GitHub</title><path d="M10 0a10 10 0 00-3.16 19.49c.5.1.68-.22.68-.48l-.01-1.7c-2.78.6-3.37-1.34-3.37-1.34-.46-1.16-1.11-1.47-1.11-1.47-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.9 1.52 2.34 1.08 2.91.83.1-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.94 0-1.1.39-1.99 1.03-2.69a3.6 3.6 0 01.1-2.64s.84-.27 2.75 1.02a9.58 9.58 0 015 0c1.91-1.3 2.75-1.02 2.75-1.02.55 1.37.2 2.4.1 2.64.64.7 1.03 1.6 1.03 2.69 0 3.84-2.34 4.68-4.57 4.93.36.31.68.92.68 1.85l-.01 2.75c0 .26.18.58.69.48A10 10 0 0010 0"></path></svg>
-    </div>
-
     <div class="info">
       <h1>Functional web components</h1>
-      <p>functional & helpful components for all frameworks built with stenciljs</p>
+      <p>Bunch of helpful web components built with stenciljs</p>
+      <p class="icons">
+        <svg class="fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="24" height="24">
+          <title>GitHub</title>
+          <path
+            d="M10 0a10 10 0 00-3.16 19.49c.5.1.68-.22.68-.48l-.01-1.7c-2.78.6-3.37-1.34-3.37-1.34-.46-1.16-1.11-1.47-1.11-1.47-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.9 1.52 2.34 1.08 2.91.83.1-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.94 0-1.1.39-1.99 1.03-2.69a3.6 3.6 0 01.1-2.64s.84-.27 2.75 1.02a9.58 9.58 0 015 0c1.91-1.3 2.75-1.02 2.75-1.02.55 1.37.2 2.4.1 2.64.64.7 1.03 1.6 1.03 2.69 0 3.84-2.34 4.68-4.57 4.93.36.31.68.92.68 1.85l-.01 2.75c0 .26.18.58.69.48A10 10 0 0010 0">
+          </path>
+        </svg>
+      </p>
     </div>
 
-    <div class="content">
-      <div class="url">
-        <url-preview-card url="https://www.freshworks.com/saas/all-the-engineering-that-goes-into-democratically-designing-a-help-widget-blog/"></url-preview-card>
-        <url-preview-card url="https://support.freshdesk.com/support/solutions/articles/229635-multi-channel-support"></url-preview-card>
-      </div>
-    </div>
+    <url-preview-card url="https://www.freshworks.com/saas/all-the-engineering-that-goes-into-democratically-designing-a-help-widget-blog"></url-preview-card>
+
+    <component-docs></component-docs>
   </div>
 
-  <!-- <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component> -->
-  <!-- <url-preview-card url="https://developers.google.com/web/ilt/pwa/working-with-the-fetch-api"></url-preview-card> -->
+  <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    }
 
+    .container {
+      width: 100%;
+      height: inherit;
+      background-color: #f8fafc;
+    }
 
-<style>
-  html,body {
-    height: 100%;
-    margin: 0;
-  }
+    .navbar {
+      height: 7%;
+      width: 100%;
+    }
 
-  .container {
-    width: 100%;
-    height: inherit;
-    background-color: #f8fafc;
-  }
+    .info {
+      height: 25%;
+      background: #dbd7fd;
+      width: 100%;
+      text-align: center;
+      padding-top: 5%;
+    }
 
-  .navbar {
-    height: 7%;
-    width: 100%;
-  }
+    .url {
+      width: 40%;
+    }
 
-  .info {
-    height: 25%;
-    background: #dbd7fd;
-    width: 100%;
-    text-align: center;
-    padding-top: 5%;
-  }
+    .icons {
+      padding: 10px;
+    }
 
-  .url {
-    width: 30%;
-  }
-</style>
+  </style>
+  <script>
+    document.addEventListener('fetchMeta', async function (args) {
+      let proxyUrl = `http://localhost:9000/.netlify/functions/fetch-meta?url=${args.detail}`;
+      let {
+        data
+      } = await fetch(proxyUrl).then(response => response.json());
+      args.target.updateCard(data);
+      args.target.fetchError(data);
+    });
+  </script>
 </body>
+
 </html>
